--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "heic2any": "^0.0.4",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
+    "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
