--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "clsx": "^2.1.1",
     "heic2any": "^0.0.4",
     "lucide-react": "^0.546.0",
-    "next": "^16.0.7",
+    "next": "16.0.10",
     "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.6",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
-    "react-server-dom-webpack": "^19.2.1",
+    "react-server-dom-webpack": "19.2.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12",
